--- a/src/locales/az/translation.json
+++ b/src/locales/az/translation.json
@@ -10,6 +10,7 @@
     "contact": "Əlaqə"
   },
   "hero":{
-    "welcome" : "Rəqəmsal Qalereyama Xoş Gəlmisiniz!"
+    "welcome" : "Rəqəmsal Qalereyama Xoş Gəlmisiniz!",
+    "desc" : "Qalereya üslubunda hazırlanmış portfolioma soldan sağa sürüşdürərək baxa bilərsiniz 😊. Sizi kopiraytinq nümunələri, dizayn işlərim, əldə etdiyim nailiyyətlər, SEO və digər müxtəlif məzmunlar gözləyir. 🖌️"
   }
 }
