--- a/src/locales/az/translation.json
+++ b/src/locales/az/translation.json
@@ -75,7 +75,7 @@
   "desc1": "Layihə, əməkdaşlıq və ya sadəcə bir fikri müzakirə etmək istəyirsiniz? Mənimlə əlaqə saxlamaqdan çəkinməyin! Həmişə mənalı əməkdaşlıqlara və maraqlı söhbətlərə açığam. 😊",
   "name": "Arzu Göyüşova",
   "job-title": "Rəqəmsal Marketinq üzrə Mütəxəssis",
-  "CVbutton": "CV-mi yoxlayın",
+  "CVbutton": "CV-mə baxın!",
   "desc2": "Gəlin birlikdə iz qoyaq! 🚀"
 }
 }
