--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -58,7 +58,9 @@
 "tools": {
   "title":  "Tools & Certificates",
   "tool":  "🧰 Tools & Technologies",
-  "cert":  "Certificates"
+  "cert":  "Certificates",
+  "click": "Click",
+  "viewCert": "View Certificate"
 },
 "design": {
   "title":  "Designs",
